--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction:column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: cursive;
+  font-size: medium;
+}
+.title_section {
+  width: 100%;
+  background: #89cff0;
+  height: 48vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: rgb(240, 255, 255);
 }
 
-.App-link {
-  color: #61dafb;
+.title_section input {
+  width: 400px;
+  height: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title_section button:hover {
+  background: #3437e2;
+  cursor:pointer;
 }
